--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension DBIx::Path.
 
+0.02  Tue Feb 22 01:17:42 2005
+    - Modified resolve() to ignore empty components in the path.
+
 0.01  Sat Jan 22 22:56:27 2005
 	- original version; created by h2xs 1.23 with options
 		-AX DBIx::Path
