--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension DBIx::Path.
 
+0.03  Wed Feb 23 01:58:10 2005
+    - Added parents() and reverse() methods.
+    - Added lock and unlock hooks.
+
 0.02  Tue Feb 22 01:17:42 2005
     - Modified resolve() to ignore empty components in the path.
 
